.gitlab/runners/cost-optimization.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-runner-spot
  namespace: gitlab-runner
  labels:
    app: gitlab-runner
    component: spot
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gitlab-runner
      component: spot
  template:
    metadata:
      labels:
        app: gitlab-runner
        component: spot
    spec:
      priorityClassName: runner-spot-priority
      tolerations:
      - key: "spot-instance"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      nodeSelector:
        node-type: spot
      containers:
      - name: gitlab-runner
        image: gitlab/gitlab-runner:latest
        command:
        - /usr/bin/gitlab-runner
        - run
        - --config=/etc/gitlab-runner/config.toml
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 2Gi
      restartPolicy: Always
